name:                bounded-queue
version:             0.1.0.0
category:            Data Structures
license:             BSD3
license-file:        LICENSE
author:              David M. Johnson <code@dmj.io>
maintainer:          David M. Johnson <code@dmj.io>
homepage:            http://github.com/dmjio/bounded-queue
copyright:           Copyright (c) 2020-2025 David M. Johnson
bug-reports:         https://github.com/dmjio/bounded-queue/issues
build-type:          Simple
extra-source-files:  README.md
cabal-version:       1.22
synopsis:            A bounded queue implementation
description:
  A pure bounded queue in Haskell

extra-source-files:
  README.md

library
  default-language:
    Haskell2010
  exposed-modules:
    Data.BQueue
  ghc-options:
    -Wall
  hs-source-dirs:
    src
  build-depends:
    base < 5,
    containers

source-repository head
   type: git
   location: https://github.com/dmjio/bounded-queue.git
